--- a/css/style.css
+++ b/css/style.css
@@ -1,9 +1,10 @@
 body {
-  background-color: #423409;
+  background-color: color: white;
   color: #08081A;
-  font-size: 2em;
+  font-size: 1em;
   font-color: #08081A
   line-height: 125%;
+  padding-bottom: 20px;
 }
 
 nav {
@@ -52,4 +53,39 @@ article {
 .container {
   margin: 0 auto;
   width: 50%;
+}
+
+figcaption{
+  font-size: .7em;
+  padding-bottom: 20px;
+}
+
+h1 {
+  font-size: 2.0em;
+  padding-bottom: 20px;
+}
+
+h3 {
+  font-size: 1.6em;
+  padding-bottom: 20px;
+}
+.author {
+  font-size: 0.8em;
+  padding-bottom: 20px;
+}
+
+.story-text {
+  font-size: 1.2em;
+  padding-bottom: 20px;
+}
+p{
+  padding-bottom: 20px;
+}
+
+a{
+  text-decoration: none;
+}
+
+a:hover{
+  color:orange;
 }
